Rename loader class

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "extra": {
         "bolt-assets": "web",
-        "bolt-class": "Bolt\\Extension\\Bolt\\DirectoryIndex\\DirectoryIndexExtension",
+        "bolt-class": "Bolt\\Extension\\Bolt\\DirectoryIndex\\FileDirectoryBrowserExtension",
         "branch-alias": {
             "dev-master": "3.0.x-dev"
         }
